* What will be new in gsl-1.7:

** The bound coulomb function gsl_sf_hydrogenicR_e no longer reports
an underflow for exact zeroes of the wavefunction.

** gsl_linalg_SV_decomp_jacobi now reports an error for the
unimplemented case M<N correctly.

** Fixed conformance test for the SYRK and HERK blas functions
gsl_blas_{s,d,c,z}syrk and gsl_blas_{c,z}herk for non-square matrices.

** Configure now checks for presence of ieeefp.h if needed.

** Differential equation solvers now propagate error codes returned
from user-defined functions to the top-level in all cases.

** Sort functions now avoid an infinite loop if Nans are present in
the input vector.  The order of nans in the output is undefined,
although other elements will be sorted correctly.

* What was new in gsl-1.6:

** Added a new wavelet directory, with 1-dimensional and 2-dimensional
discrete wavelet transforms.

** Added support for LQ and P^T LQ decompositions.  To find the QR
decomposition of large systems (M>>N) use the LQ decomposition,
solving the transpose of the original system.  This allows more
efficient memory access, and is useful for solving large least-squares
problems.

** Fixed a bug in the SYRK and HERK blas functions gsl_blas_{s,d,c,z}syrk 
and gsl_blas_{c,z}herk which caused invalid memory access for non-square 
matrices.

** Fixed a bug in gsl_swap_vectors which caused it to return incorrect
results when swapping vectors with different strides.

** Corrected the error estimate for gsl_cheb_eval_n_err to use
evaluation order instead of the approximation order.

** Improved the reliability of the gsl_sf_gamma_inc family of
functions.

** Equal abscissae are now handled gracefully in the cspline and
periodic cspline interpolations.

** Removed potential cancellation error in calculation of uniform
histogram ranges.

** Improved numerical stability of integration for akima and cspline
interpolation.

** Differential equation solvers now handle error codes returned from