@@ -1,3 +1,8 @@
+2005-04-28  Brian Gough  <bjg@network-theory.co.uk>
+
+	* brent.c (brent_iterate): fixed error in ordering of tests for
+	updates so that it agrees with Brent's book.
+
 2004-04-13  Brian Gough  <bjg@network-theory.co.uk>
 
 	* brent.c (brent_iterate): corrected condition for setting to
