@@ -1,5 +1,8 @@
 * What will be new in gsl-1.7:
 
+** Fixed an error in the the brent minimisation algorithm.  Iterations
+should now follow Brent's original description correctly.
+
 ** The bound coulomb function gsl_sf_hydrogenicR_e no longer reports
 an underflow for exact zeroes of the wavefunction.
 
